fixed white bar on mobile site

--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -11,7 +11,7 @@ header{
     height: 360px;
     align-items: start;
     justify-content: start;
-    margin-left: 5px;
+    padding-left: 2.5vw;
 }
 #header{
     margin-left: 0;
